# microkernel

./: .clang-format  .gitignore  CMakeLists.txt  README.md
kernel/: CMakeLists.txt
kernel/include/kernel/: ConfigManager.hpp  PluginInterface.hpp  kernel.hpp  model.hpp  ring_buffer.hpp
kernel/src/: ConfigManager.cpp  main.cpp
numeri/include/kernel/: config_manager.hpp  kernel.hpp  ring_buffer.hpp
numeri/src/: config_manager.cpp
plugins/: CMakeLists.txt
plugins/plugin1/: CMakeLists.txt  plugin1.cpp
plugins/plugin2/: CMakeLists.txt  plugin2.cpp
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  test_ringbuffer.cpp
